TNC-012: Provide a temporary interface for providing the full information of a certain entity